NOBUG: Fix broken static image on safari

--- a/src/gatsby/src/styles/megaMenu/megaMenu.scss
+++ b/src/gatsby/src/styles/megaMenu/megaMenu.scss
@@ -45,11 +45,17 @@
     }
 
     .bc-parks-logo--desktop {
+      &.gatsby-image-wrapper {
+        width: 148px;
+      }
       img {
         height: 45px;
       }
     }
     .bc-parks-logo--mobile {
+      &.gatsby-image-wrapper {
+        width: 136px;
+      }
       img {
         height: 50px;
       }
